<resources>
    <string name="app_name">Series Tracker</string>
    <string name="enter_name">Enter name…</string>
    <string name="close">close</string>
    <string name="continue_watching">Continue watching</string>
    <string name="details">details</string>
    <string name="summary">Summary</string>
    <string name="export">export</string>
    <string name="remember_me">Remember me</string>
    <string name="add_series">Add series</string>
    <string name="enter_title">Enter title…</string>
    <string name="cover_photo">cover photo</string>
    <string name="not_seen">not seen</string>
    <string name="splash_screen">splash screen</string>
    <string name="series_tracker">Series Tracker</string>

    <!--register-->
    <string name="register">Register</string>
    <string name="short_name">Your name length has to contain at least 6 characters</string>
    <string name="already_exists">User already exists</string>
    <string name="registration_success">Registration successfully</string>

    <!--login-->
    <string name="login">Login</string>
    <string name="does_not_exist">User does not exist</string>
    <string name="login_successfully">Login successfully</string>

    <!--add series-->
    <string name="empty_string">You have to enter the title first</string>
    <string name="add_new_series">Would you like to add</string>
    <string name="show_not_added">Show not added</string>
    <string name="series_already_added">TV show already added</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="question_mark">\?</string>
    <string name="choose_season">Choose season</string>
    <string name="season">Season\u0020</string>
    <string name="data_successfully_added">Data successfully added</string>

    <!--messages-->
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_entries_found">No entries found</string>

    <!--API-->
    <string name="language">en-US</string>
    <string name="page_start">1</string>
    <string name="falsee">false</string>

    <!--export-->
    <string name="user_data_sql">/userData.sql</string>
    <string name="tv_show_sql">/tvShow.sql</string>
    <string name="problem_at_export">There was a problem exporting data</string>
    <string name="database">Database</string>
    <string name="user_data_json">/userData.json</string>
    <string name="tv_show_json">/tvShow.json</string>
    <string name="notification_title">notification title</string>
    <string name="notification_text">noticifaction text</string>

    <!--home-->
    <string name="season_init">S</string>
    <string name="space">\u0020</string>
    <string name="episode_init">E</string>
    <string name="successfully_deleted">Successfully deleted</string>
    <string name="fail_delete">Failed to delete</string>
    <string name="no_entries_added">No TV show added</string>

    <!--notification-->
    <string name="new_episode_arrival">New episode arrival</string>
    <string name="notify_new_episode">Notifies when a new episode arrives</string>
    <string name="new_episode">New Episode</string>
    <string name="waiting_for_new_season">Waiting for new season</string>

</resources>