<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="50dp"
        android:text="@string/summary"
        android:textColor="@color/secondaryColor"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewSeries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/export"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_share"
        android:tint="@color/secondaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSeries"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/cardview_series" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonAddSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/secondaryDarkColor"
        android:clickable="true"
        android:contentDescription="@string/add_series"
        android:src="@drawable/ic_baseline_add_24"
        android:tint="@color/white"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>