<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/imageButtonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/close"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        android:src="@drawable/ic_cancel"
        android:tint="@color/secondaryDarkColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/add_series"
        android:textColor="@color/secondaryColor"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddSeries"
        app:layout_constraintTop_toTopOf="@+id/textView2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextTitle"
                android:hint="@string/enter_title"
                android:inputType="textPersonName"
                android:layout_margin="30dp"
                android:paddingEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:padding="15dp"
                tools:layout_editor_absoluteX="30dp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:layout_margin="30dp"
            style="@style/SpinnerTheme"
            android:padding="15dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:layout_margin="30dp"
            style="@style/SpinnerTheme"
            android:padding="15dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonAddSeries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/background_button"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        android:text="@string/add_series"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>