<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButtonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/close"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        android:src="@drawable/ic_cancel"
        android:tint="@color/secondaryDarkColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/add_series"
        android:textColor="@color/secondaryColor"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/background_edittext"
        android:hint="@string/enter_title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:paddingEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="LabelFor,RtlSymmetry" />

    <ImageButton
        android:id="@+id/imageButtonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext"
        android:clickable="true"
        android:contentDescription="@string/enter_title"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="15dp"
        android:src="@drawable/ic_baseline_search_24"
        android:tint="?android:colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTitle"
        app:layout_constraintEnd_toEndOf="@+id/editTextTitle"
        app:layout_constraintTop_toTopOf="@+id/editTextTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewChooseSeries"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="30dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/cardview_add_series" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/progress_bar_color"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddSeries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <Button
        android:id="@+id/buttonAddSeries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/background_button"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        android:text="@string/add_series"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>